--- a/寵物大公投.html
+++ b/寵物大公投.html
@@ -318,7 +318,8 @@ $(".hd").click(function(){
 });
      
      $(".sub").click(function(){
-            window.location.href = '1/index.html';
+ alert("投票成功");
+             // window.location.href = '1/index.html';
 });
      
      //关闭
