--- a/寵物大公投.html
+++ b/寵物大公投.html
@@ -9,8 +9,8 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="HandheldFriendly" content="True">
-        <link rel="stylesheet" type="text/css" href="https://www.xhywuxjs.xyz/static/css/css.css">
-        <link rel="stylesheet" type="text/css" href="https://www.xhywuxjs.xyz/static/css/index.css">
+        <link rel="stylesheet" type="text/css" href="css/css.css">
+        <link rel="stylesheet" type="text/css" href="css/index.css">
         <script src="https://www.xhywuxjs.xyz/static/js/jquery-1.8.3.min.js"></script>
         <script src="https://www.xhywuxjs.xyz/static/js/layer.js"></script><link rel="stylesheet" href="https://www.xhywuxjs.xyz/static/js/theme/default/layer.css?v=3.1.1" id="layuicss-layer">
         <script>
@@ -26,7 +26,7 @@
 
     </head>
     <body>
-        <div><img src="https://www.xhywuxjs.xyz/static/picture/d6659108.jpg"></div>
+        <div><img src="css/d6659108.jpg"></div>
         <div class="logo">
             <div class="logo_but hd">活動規則</div>
             <div class="logo_but ph">認證登入</div>
@@ -38,7 +38,7 @@
                 <li class="Exhibition_block">
                     <div class="E_center">
                         <div class="E_top">
-                            <img src="https://www.xhywuxjs.xyz/static/picture/65ed9d002f336.jpg">
+                            <img src="css/65ed9d002f336.jpg">
                         </div>
                         <div class="E_bot">
                             <p>40號 芳妮</p>
@@ -49,7 +49,7 @@
                 </li><li class="Exhibition_block">
                     <div class="E_center">
                         <div class="E_top">
-                            <img src="https://www.xhywuxjs.xyz/static/picture/65ed9b558b9bd.jpg">
+                            <img src="css/65ed9b558b9bd.jpg">
                         </div>
                         <div class="E_bot">
                             <p>31號 本索爾</p>
@@ -60,7 +60,7 @@
                 </li><li class="Exhibition_block">
                     <div class="E_center">
                         <div class="E_top">
-                            <img src="https://www.xhywuxjs.xyz/static/picture/65ed9985c735f.jpg">
+                            <img src="css/65ed9985c735f.jpg">
                         </div>
                         <div class="E_bot">
                             <p>22號 惠美</p>
@@ -71,7 +71,7 @@
                 </li><li class="Exhibition_block">
                     <div class="E_center">
                         <div class="E_top">
-                            <img src="https://www.xhywuxjs.xyz/static/picture/65ed961321e5c.jpg">
+                            <img src="css/65ed961321e5c.jpg">
                         </div>
                         <div class="E_bot">
                             <p>16號 桃太郎</p>
@@ -82,7 +82,7 @@
                 </li><li class="Exhibition_block">
                     <div class="E_center">
                         <div class="E_top">
-                            <img src="https://www.xhywuxjs.xyz/static/picture/65ed9d2b79717.jpg">
+                            <img src="css/65ed9d2b79717.jpg">
                         </div>
                         <div class="E_bot">
                             <p>41號 琪琪</p>
@@ -93,7 +93,7 @@
                 </li><li class="Exhibition_block">
                     <div class="E_center">
                         <div class="E_top">
-                            <img src="https://www.xhywuxjs.xyz/static/picture/65e85c15ce7a8.jpg">
+                            <img src="css/65e85c15ce7a8.jpg">
                         </div>
                         <div class="E_bot">
                             <p>4號 哈妮HANI</p>
@@ -104,7 +104,7 @@
                 </li><li class="Exhibition_block">
                     <div class="E_center">
                         <div class="E_top">
-                            <img src="https://www.xhywuxjs.xyz/static/picture/65ed9b2b83103.jpg">
+                            <img src="css/65ed9b2b83103.jpg">
                         </div>
                         <div class="E_bot">
                             <p>30號 艾美拉</p>
@@ -115,7 +115,7 @@
                 </li><li class="Exhibition_block">
                     <div class="E_center">
                         <div class="E_top">
-                            <img src="https://www.xhywuxjs.xyz/static/picture/65ed9a7c4df48.jpg">
+                            <img src="css/65ed9a7c4df48.jpg">
                         </div>
                         <div class="E_bot">
                             <p>27號 托尼</p>
@@ -126,7 +126,7 @@
                 </li><li class="Exhibition_block">
                     <div class="E_center">
                         <div class="E_top">
-                            <img src="https://www.xhywuxjs.xyz/static/picture/65ed9bc580594.jpg">
+                            <img src="css/65ed9bc580594.jpg">
                         </div>
                         <div class="E_bot">
                             <p>34號 拉梅</p>
@@ -137,7 +137,7 @@
                 </li><li class="Exhibition_block">
                     <div class="E_center">
                         <div class="E_top">
-                            <img src="https://www.xhywuxjs.xyz/static/picture/65e85b05405b1.jpg">
+                            <img src="css/65e85b05405b1.jpg">
                         </div>
                         <div class="E_bot">
                             <p>10號 貝果</p>
@@ -148,7 +148,7 @@
                 </li><li class="Exhibition_block">
                     <div class="E_center">
                         <div class="E_top">
-                            <img src="https://www.xhywuxjs.xyz/static/picture/65ed9abdcd2e2.jpg">
+                            <img src="css/65ed9abdcd2e2.jpg">
                         </div>
                         <div class="E_bot">
                             <p>29號 齊齊</p>
@@ -159,7 +159,7 @@
                 </li><li class="Exhibition_block">
                     <div class="E_center">
                         <div class="E_top">
-                            <img src="https://www.xhywuxjs.xyz/static/picture/65ed9c4332c69.jpg">
+                            <img src="css/65ed9c4332c69.jpg">
                         </div>
                         <div class="E_bot">
                             <p>36號 小王子</p>
@@ -170,7 +170,7 @@
                 </li><li class="Exhibition_block">
                     <div class="E_center">
                         <div class="E_top">
-                            <img src="https://www.xhywuxjs.xyz/static/picture/65ed98c4a80ba.jpg">
+                            <img src="css/65ed98c4a80ba.jpg">
                         </div>
                         <div class="E_bot">
                             <p>19號 濱崎</p>
@@ -181,7 +181,7 @@
                 </li><li class="Exhibition_block">
                     <div class="E_center">
                         <div class="E_top">
-                            <img src="https://www.xhywuxjs.xyz/static/picture/65ed95c142f3f.jpg">
+                            <img src="css/65ed95c142f3f.jpg">
                         </div>
                         <div class="E_bot">
                             <p>12號 繽果</p>
@@ -192,7 +192,7 @@
                 </li><li class="Exhibition_block">
                     <div class="E_center">
                         <div class="E_top">
-                            <img src="https://www.xhywuxjs.xyz/static/picture/65e857c36dc83.jpg">
+                            <img src="css/65e857c36dc83.jpg">
                         </div>
                         <div class="E_bot">
                             <p>13號 瑞歐寶</p>
@@ -203,7 +203,7 @@
                 </li><li class="Exhibition_block">
                     <div class="E_center">
                         <div class="E_top">
-                            <img src="https://www.xhywuxjs.xyz/static/picture/65e8575381276.jpg">
+                            <img src="css/65e8575381276.jpg">
                         </div>
                         <div class="E_bot">
                             <p>14號 小勝</p>
@@ -225,7 +225,7 @@
                 </li><li class="Exhibition_block">
                     <div class="E_center">
                         <div class="E_top">
-                            <img src="https://www.xhywuxjs.xyz/static/picture/65ed99b9a314b.jpg">
+                            <img src="css/65ed99b9a314b.jpg">
                         </div>
                         <div class="E_bot">
                             <p>23號 騰男</p>
@@ -236,7 +236,7 @@
                 </li><li class="Exhibition_block">
                     <div class="E_center">
                         <div class="E_top">
-                            <img src="https://www.xhywuxjs.xyz/static/picture/65ed9c0324951.jpg">
+                            <img src="css/65ed9c0324951.jpg">
                         </div>
                         <div class="E_bot">
                             <p>35號 蝶蝶美子</p>
@@ -247,7 +247,7 @@
                 </li><li class="Exhibition_block">
                     <div class="E_center">
                         <div class="E_top">
-                            <img src="https://www.xhywuxjs.xyz/static/picture/65ed99190e969.jpg">
+                            <img src="css/65ed99190e969.jpg">
                         </div>
                         <div class="E_bot">
                             <p>20號 蒂莎</p>
@@ -318,8 +318,8 @@ $(".hd").click(function(){
 });
      
      $(".sub").click(function(){
- alert("投票成功");
-             // window.location.href = '1/index.html';
+        alert("投票成功");
+           // window.location.href = '1/index.html';
 });
      
      //关闭
