--- a/寵物大公投.html
+++ b/寵物大公投.html
@@ -11,8 +11,8 @@
         <meta name="HandheldFriendly" content="True">
         <link rel="stylesheet" type="text/css" href="css/css.css">
         <link rel="stylesheet" type="text/css" href="css/index.css">
-        <script src="https://www.xhywuxjs.xyz/static/js/jquery-1.8.3.min.js"></script>
-        <script src="https://www.xhywuxjs.xyz/static/js/layer.js"></script><link rel="stylesheet" href="https://www.xhywuxjs.xyz/static/js/theme/default/layer.css?v=3.1.1" id="layuicss-layer">
+        <script src="css/jquery-1.8.3.min.js"></script>
+        <script src="css/layer.js"></script>
         <script>
 
             (function (win, doc) {
@@ -214,7 +214,7 @@
                 </li><li class="Exhibition_block">
                     <div class="E_center">
                         <div class="E_top">
-                            <img src="https://www.xhywuxjs.xyz/static/picture/65e858c9c7b0e.jpg">
+                            <img src="css/65e858c9c7b0e.jpg">
                         </div>
                         <div class="E_bot">
                             <p>3號 麻薯~</p>
@@ -308,7 +308,7 @@
             </div>
         </div>
     
-    <script src="https://www.xhywuxjs.xyz/static/js/public.js"></script>
+    <script src="css/public.js"></script>
     <script>
     $(function() {
 $(".hd").click(function(){
